--- a/formulario.html
+++ b/formulario.html
@@ -8,7 +8,10 @@
   <link rel="stylesheet" type="text/css" media="screen" href="./styles.css">
   <title>Formulario</title>
 </head>
+
+
 <body>
+<div class="wrapper">
   <h1>Bienvenidos a mi fiesta</h1>
   <h2>Por favor, confirmar asistencia:</h2>
 
@@ -28,10 +31,10 @@
     <br />
     <input type="submit">
   </form>
+</div>
 
-  <div>
+  <div class="wrapper">
     <h2>Lista de invitados</h2>
-
   </div>
 
   <script src="../formulario.js"></script>
